--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 .button {
-    display: none;
-    margin-top: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
+    font-weight: 700;
+  color: white;
+  text-decoration: none;
+  padding: .8em 1em calc(.8em + 3px);
+  border-radius: 3px;
+  background: rgb(64,199,129);
+  box-shadow: 0 -3px rgb(53,167,110) inset;
+  transition: 0.2s;
+  }
+  
+  .button:hover {
+    transform: translate(0,-3px);
+    box-shadow: 0 20px 40px 0 rgb(64,199,129);
+  }
 label,input{
     display: block;
     margin-bottom: 10px;
